<?xml version="1.0" encoding="utf-8"?>
<resources>

    // Constants
    <string name="C_CLASS_RACE">Race</string>
    <string name="C_CLASS_GAME_ACTOR">Character</string>

    <string name="app_name">D5proj</string>
    <string name="base_stats">Base stats</string>
    <string name="derived_stats">Derived stats</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="btnIncrease">+</string>
    <string name="btnDecrease">-</string>
    <string name="point_pool">Point pool</string>
    <string name="panel_rolls_title">Rolls</string>
    <string name="btn_roll">Roll</string>
    <string name="btn_reset">Reset rolls</string>
    <string name="experience_points">XP</string>
    <string name="character_level">Character level</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prof_bonus">Proficiency bonus</string>
    <string name="saving_throws">Saving throws</string>

    <string name="stat_name_str">Strength</string>
    <string name="stat_name_dex">Dexterity</string>
    <string name="stat_name_con">Constitution</string>
    <string name="stat_name_int">Intelligence</string>
    <string name="stat_name_wis">Wisdom</string>
    <string name="stat_name_cha">Charisma</string>

    <string name="stat_name_brief_str">STR</string>
    <string name="stat_name_brief_dex">DEX</string>
    <string name="stat_name_brief_con">CON</string>
    <string name="stat_name_brief_int">INT</string>
    <string name="stat_name_brief_wis">WIS</string>
    <string name="stat_name_brief_cha">CHA</string>

    <string name="classname_barbarian">Barbarian</string>
    <string name="classname_bard">Bard</string>
    <string name="classname_cleric">Cleric</string>
    <string name="classname_druid">Druid</string>
    <string name="classname_fighter">Fighter</string>
    <string name="classname_monk">Monk</string>
    <string name="classname_paladin">Paladin</string>
    <string name="classname_ranger">Ranger</string>
    <string name="classname_rogue">Rogue</string>
    <string name="classname_sorcerer">Sorcerer</string>
    <string name="classname_warlock">Warlock</string>
    <string name="classname_wizard">Wizard</string>
    <string name="select_char_class">Select character class</string>
    <string name="frame_text_ac">AC</string>
    <string name="frame_text_hp">HP</string>
    <string name="frame_text_fort">Fort</string>
    <string name="frame_text_ref">Ref</string>
    <string name="frame_text_will">Will</string>
    <string name="frame_text_init">Init</string>
    <string name="selector_label_race">Race:</string>
    <string name="label_race_ability_mods">Racial ability modifiers:</string>
    <string name="label_race_features">Racial features:</string>
    <string name="stat_mods_none">None</string>
    <string name="OK">OK</string>
    <string name="feature_options_pick_one">Choose 1 option</string>
    <string name="feature_options_pick_several">Choose %s options</string>
    <string name="spells_pick_one_zero">Choose 1 0th level spell</string>
    <string name="spells_pick_one_one">Choose 1 1st level spell</string>
    <string name="spells_pick_one_two">Choose 1 2nd level spell</string>
    <string name="spells_pick_one_three">Choose 1 3rd level spell</string>
    <string name="spells_pick_one_four">Choose 1 4th level spell</string>
    <string name="spells_pick_one_five">Choose 1 5th level spell</string>
    <string name="spells_pick_one_six">Choose 1 6th level spell</string>
    <string name="spells_pick_one_seven">Choose 1 7th level spell</string>
    <string name="spells_pick_one_eight">Choose 1 8th level spell</string>
    <string name="spells_pick_one_nine">Choose 1 9th level spell</string>
    <string name="spells_pick_several_zero">Choose %s 0th level spells</string>
    <string name="spells_pick_several_one">Choose %s 1st level spells</string>
    <string name="spells_pick_several_two">Choose %s 2nd level spells</string>
    <string name="spells_pick_several_three">Choose %s 3rd level spells</string>
    <string name="spells_pick_several_four">Choose %s 4th level spells</string>
    <string name="spells_pick_several_five">Choose %s 5th level spells</string>
    <string name="spells_pick_several_six">Choose %s 6th level spells</string>
    <string name="spells_pick_several_seven">Choose %s 7th level spells</string>
    <string name="spells_pick_several_eight">Choose %s 8th level spells</string>
    <string name="spells_pick_several_nine">Choose %s 9th level spells</string>
    <string name="error_options_array">Options array not initialized!</string>
    <string name="dialog_statalloc_settings_standard">Use standard scores</string>
    <string name="dialog_statalloc_settings_roll">Roll random scores</string>
    <string name="dialog_statalloc_settings_roll_numberdice">Dice to roll</string>
    <string name="dialog_statalloc_settings_dice_extrarolls">Extra rolls</string>
    <string name="dialog_statalloc_settings_pointbuy">Point buy</string>
    <string name="dialog_statalloc_settings_directinput">Direct score input</string>
    <string name="dialog_statalloc_settings_pointsfordistribution">Amount to distribute</string>
    <string name="dialog_statalloc_settings_roll_edit">Allow stat edition</string>

    <string name="tag_character_stats">character_stats</string>
    <string name="tag_statalloc_settings">statalloc_settings</string>

    <string name="pref_method_manual">method_manual</string>
    <string name="pref_method_roll">method_roll</string>
    <string name="pref_method_pointbuy">method_pointbuy</string>
    <string name="pref_method_stdscores">method_stdscores</string>
    <string name="pref_method_roll_allowstatedit">allowStatEdition</string>
    <string name="pref_value_dice">dice</string>
    <string name="pref_value_extrarolls">extraRolls</string>
    <string name="pref_value_pointpool">pointPool</string>
</resources>
