<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_margin="@dimen/margin_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelRaceSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selector_label_race"
            />

        <Spinner
            android:id="@+id/spinnerSelectRace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginLeft="@dimen/margin_default"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_race_ability_mods"/>

    <LinearLayout
        android:id="@+id/containerRaceStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="vertical"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_race_features"/>

    <view
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        class="android.support.v7.widget.RecyclerView"
        android:id="@+id/rvFeatures" />

</LinearLayout>