<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="left|top"
            android:layout_margin="15dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_build_24px" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/point_pool" />

                    <TextView
                        android:id="@+id/txtPointPool"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0" />
                </LinearLayout>

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxStr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Strength"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxDex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Dexterity"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Constitution"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxInt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Intelligence"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxWis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Wisdom"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />

                <com.callisto.d5proj.widgets.EditableStatBox
                    android:id="@+id/statBoxCha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:attributeName="Charisma"
                    custom:attributeRoll="0"
                    custom:maximumValue="20"
                    custom:minimumValue="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/panel_rolls_title" />

                    <TextView
                        android:id="@+id/txtTotalRolls"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/panelRolls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtRandomAttribute1"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtRandomAttribute2"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtRandomAttribute3"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtRandomAttribute4"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtRandomAttribute5"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtRandomAttribute6"
                        style="@style/statNumberEditableXXXL"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/attribute_setting_row_height"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnRollNewValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_roll" />

        <Button
            android:id="@+id/btnResetRolls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>


